--- a/indexBOOT.html
+++ b/indexBOOT.html
@@ -6,47 +6,36 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!--bootstrap CSS-->
 		<link rel="stylesheet" href="css/bootstrap.css" />
-				
-				<title>Contaminación ambiental</title>
-				
-				<link rel="icon" href="images/favicon.ico">
-				<style>
-					.rem2{font-size: 2em;}
-					.rem15{font-size: 1.5em;}
-					.rem08{font-size:0.8em;}
-					.bg-pe{background-color:#47b58a;
-					color:white;}
-					.tamTriangulo {height:auto; width:16em;}
-					.tamanoImaxes {height:auto; width:40px;}
-				</style>
+		<link href="css/estilos.css" rel="stylesheet" type="text/css"/>
+		<link rel="icon" href="images/favicon.ico">
+		<title>Contaminación ambiental</title>
 	</head>
+	
 	<body>
-						<!--Pe de páxina #47b58a-->
-					<!--.bg-pe{background-color:$teal-600;}-->
+
 <!--Navegador na cabeceira da páxina, onde se enlaza coas outras páxinas -->
-		<div class="container-fluid pt-5 bg-pe">
-			<div class="row">
-			<a href="indexBOOT.html">
-			<div class="col-12 bg-success">Inicio</div>
-			</a>
-			<!--<a href="c_aire.html">
-			<div class="col-12 col-lg-6 bg-success">Contaminación do aire</div>
-			</a>-->
-			<!--<a href="c_auga.html">
-			<div class="col-12 col-lg-6">Contaminación da auga</div>
-			</a>
-			<a href="c_solo.html">
-			<div class="col-12 col-lg-6">Contaminación do solo</div>
-			</a>-->
-			<!--<a href="#arriba">
-			<div class="col-12 col-lg-2"><img src="images/logo.png" alt="Logo da empresa" /></div>
-			</a>-->
-			</div>
-		</div>
+<nav class="navbar navbar-expand-md navbar-light bg-pe sticky-top">
+  <div class="container-fluid">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="true" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-link active" aria-current="page" href="#">Contaminación ambiental</a>
+        <a class="nav-link" href="c_aireBOOT.html">Contaminación do aire</a>
+        <a class="nav-link" href="c_augaBOOT.html">Contaminación da auga</a>
+        <a class="nav-link" href="c_soloBOOT.html">Contaminación do solo</a>
+      </div>
+    </div>
+	<a class="navbar-brand" href="#"><img src="images/logo.png" class="tamanoLogo" alt="Logo da empresa" /></a>
+  </div>
+</nav>
 
 <div class="container">
+	<div id="arriba" class="container my-5">
+	</div>
 <!--Título da páxina-->
-				<div class="container text-center py-5">
+				<div class="container text-center py-5 ">
 					<h1 class="display-1">CONTAMINACIÓN AMBIENTAL</h1>
 				</div>
 
@@ -61,7 +50,7 @@
 <!--Zona das imaxes. Cando se pasa o cursor por encima, modifícanse as súas cores e aparece o texto -->		
 			<div class="container-fluid">
 				<div class="container py-3">
-					<h1 class="display-3">ONDE ESTÁ?</h1>
+					<h3 class="display-3">ONDE ESTÁ?</h3>
 				</div>
 				<div class="container">
 				<div class="row">
@@ -80,14 +69,14 @@
 <!--Zona dos triángulos e video-->
 			<div class="container-fluid py-3">
 				<div class="container">
-					<h1 class="display-3">OS EFECTOS NEGATIVOS</h1>
+					<h3 class="display-3">OS EFECTOS NEGATIVOS</h3>
 				</div>
 				<div class="container">
 				<div class="row">
 				<div class="col-12 col-lg-4 col-md-6">
 					<img src="images/saude_toxivo.png" class="tamTriangulo" alt="Peligro-toxicidade" />
 					<p>Sobre a saúde:</p>
-						<ul>
+						<ul class="debuxoUL">
 							<li>Enfermidades respiratorias</li>
 							<li>Danos cardiovasculares</li>
 							<li>Danos no aparato reprodutor</li>
@@ -98,7 +87,7 @@
 				<div class="col-12 col-lg-4 col-md-6">
 					<img src="images/saude_territorio.png" class="tamTriangulo" alt="Peligro-toxicidade" />
 						<p>Sobre o territorio:</p>
-						<ul>
+						<ul class="debuxoUL">
 							<li>O cambio climático</li>
 							<li>O efecto invernadoiro</li>
 							<li>O oco da capa de ozono</li>
@@ -115,8 +104,8 @@
 </div>
 
 <!--Pé de páxina -->
-		<div class="container-fluid bg-pe">
-			<div class="container py-3">
+		<div class="container-fluid bg-pe letraBranca">
+			<div class="container pt-3">
 			<div class="row justify-content-between">
 			<div class="col-12 col-md-4">
 				<p class="rem08 text-center"> Avenue de Lorraine 78110 Le Vésinet +33 627 21 35 69</p>
@@ -139,8 +128,7 @@
 	</div>
 	
 <!--Cousas de bootstrap-->
-		<script src="js/jquery-3.5.1.slim.min.js"></script>
-		<script src="js/popper.min.js"></script>
-		<script src="js/bootstrap.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
 	</body>
 </html>
