--- a/c_aireBOOT.html
+++ b/c_aireBOOT.html
@@ -41,53 +41,48 @@ CONTAMINACIÓN DO AIRE
   </div>
 </nav>
 
-<!--Comezo do corpo da páxina (sen navegador e sen o pé de páxina) -->		
-		<div class="container">
+<div class="container">
 
-<!--Un div baleiro por comodidade, para poder controlar mellor os tamaños. div auxiliar -->			
-			<div id=arriba> <!--Para acceder ao comezo da páxina-->
-			<div class="recheo"></div>
-			</div>
+<!--Título da páxina-->
+				<div class="container text-center py-5 ">
+					<h1 class="display-1">CONTAMINACIÓN DO AIRE</h1>
+				</div>
 
-<!--Zona do header, introducción -->
-		<div class="header">
-			<div class="H1">
-			<h1>CONTAMINACIÓN DO AIRE</h1>
-			</div>
-			<div class="texto">
+<!--Introducción-->
+			<div class="container mx-3">
+			<div class="row">
+			<div class="col-12 col-md-6">
 				<p>A contaminación do aire consiste na presenza de materiais, substancias ou formas de enerxía que impliquen molestia grave, risco ou dano para a seguridade ou a saúde das persoas, do medioambiente e dos demáis bens de calquera natureza.</p>
 				<p>En función do seu tamaño divídense en:</p>
-				<ul>
+				<ul class="debuxoUL">
 					<li>Partículas grosas. O seu diámetro é superior a 2,5 µm; o po, polen, cinzas...</li>
 					<li>Partículas finas. O se diámetro é inferior a 2,5 µm; vapores, aerosois, metais...</li>
 				</ul>
-				<img src="images/icono_aire.png" alt="Caricatura da contaminación do aire" />
+				<img src="images/icono_aire.png" class="tamanoIconos mx-auto d-block" alt="Caricatura da contaminación do aire" />
 			</div>
-			<div class="video">
-				<video controls autoplay muted loop><source src="Audiovisual/polucion.mp4" type="video/mp4">Factoría contaminando</video>
+			<div class="col12 col-md-6">
+				<video controls autoplay muted loop class="tamanoVideo"><source src="Audiovisual/polucion.mp4" type="video/mp4">Factoría contaminando</video>
 			</div>
-		</div>
+			</div>
+			</div>
 
-<!--Seguinte bloque: Causas e consecuencias. Está dividido ao 50%-->
-		<div class="CausasConsec">
-			<div class="causas">
-				<div class="H2">
-				<h2>CAUSAS</h2>
-				</div>
+<!--Causas e consecuencias-->
+		<div class="container my-5">
+			<div class="row">
+				<div class="col-12 col-md-6">
+				<h3 class="display-3">CAUSAS</h3>
 				<p>Algunhas causas poden ser:</p>
-				<ul>
+				<ul class="debuxoUL">
 					<li>Industria química</li>
 					<li>Explosións nucleares</li>
 					<li>Uso de combustibles fósiles</li>
 					<li>Erupcións volcánicas</li>
 				</ul>
-			</div>
-			<div class="consecuencias">
-				<div class="H2">
-				<h2>CONSECUENCIAS</h2>
 				</div>
+				<div class="col-12 col-md-6">
+				<h3 class="display-3">CONSECUENCIAS</h3>
 				<p>As súas consecuencias son:</p>
-				<ul>
+				<ul class="debuxoUL">
 					<li>Danos na saude</li>
 					<li>Agrandamento do buraco de ozono</li>
 					<li>Elevación da temperatura media do planeta</li>
@@ -95,21 +90,22 @@ CONTAMINACIÓN DO AIRE
 					<li>Acidificación dos océanos</li>
 					<li>Desertificación</li>
 				</ul>
+				</div>
 			</div>
 		</div>
 	
-<!--Seguinte bloque. A curiosidade-->
-		<div class="curiosidade">
-				<div class="H2">
-				<h2>CURIOSIDADE</h2>
-				</div>
-				<div class="texto">
+<!--Curiosidade-->
+		<div class="container">
+				<div class="row">
+					<div class="col-12 col-md-6">
+					<h3 class="display-3">CURIOSIDADE</h3>
 					<p>A calidade do aire refírese á presenza de contaminantes na atmosfera que poden ser nocivos para a saúde humana, para o medio ambiente ou para outros bens. Por iso, establécense índices de calidade do aire que proporcionan valores indicativos sobre o estado da atmosfera respeto a un contaminante en particular, ou a un conxunto deles.</p>
 					<p>Os índices de calidade do aire sóense expresar en categorías a partires dos posibles valores de concentración medidos, ou pronosticados por un modelo, dun contaminante en concreto (ou dun conxunto de contaminantes).</p>
-				</div>
-				<div class="fotoCuriosa">
-					<img src="images/calidade_aire.png" alt="Mapa de España"/>
+					</div>
+					<div class="col-12 col-md-6">
+					<img src="images/calidade_aire.png" class="tamanoVideo" alt="Mapa de España"/>
 					<p>Para máis información, visítese a páxina oficial de <a href="https://www.aemet.es/es/eltiempo/prediccion/calidad_del_aire?opc1=indices&opc2=global" target=_blank>AEMET</a></p>
+					</div>
 				</div>
 		</div>
 
@@ -186,21 +182,31 @@ CONTAMINACIÓN DO AIRE
 		</div>
 
 <!--Pé de páxina -->
-		<footer>
-			<address class="direccion">
-				<p> Avenue de Lorraine 78110 Le Vésinet +33 627 21 35 69</p>
-			</address>
-			<div class="copyright">
-				<p>Copyright 2021 Rosa Bitxi ©</p>
+		<div class="container-fluid bg-pe letraBranca">
+			<div class="container pt-3">
+			<div class="row justify-content-between">
+			<div class="col-12 col-md-4">
+				<p class="rem08 text-center"> Avenue de Lorraine 78110 Le Vésinet +33 627 21 35 69</p>
 			</div>
-			<div class="asociacions">
-				<img src="images/pe_polar.png" alt="Logo-WWF"/>
-				<img src="images/pe_planeta.png" alt="Logo-Greenpeace"/>
-				<img src="images/pe_loro.png" alt="Logo-BirdLife"/>
+			<div class="col-12 col-md-4 ">
+				<p class="rem08 text-center">Copyright 2021 Rosa Bitxi ©</p>
+			</div>
+			<div class="col-12 col-md-4">
+			<p class="text-right">
+				<img src="images/pe_polar.png" class="tamanoImaxes" alt="Logo-WWF"/>
+				<img src="images/pe_planeta.png" class="tamanoImaxes" alt="Logo-Greenpeace"/>
+				<img src="images/pe_loro.png" class="tamanoImaxes" alt="Logo-BirdLife"/>
 				<!--Estes logos son xerados porque me validou CSS version 3-->
-				<img src="images/vcss.gif" alt="¡CSS Válido!" />
-				<img src="images/vcss-blue.gif" alt="¡CSS Válido!" />
+				<img src="images/vcss.gif" class="tamanoImaxes" alt="¡CSS Válido!" />
+				<img src="images/vcss-blue.gif" class="tamanoImaxes" alt="¡CSS Válido!" />
+			</p>
 			</div>
-		</footer>
+		</div>
+		</div>
+	</div>
+	
+<!--Cousas de bootstrap-->
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
 	</body>
 </html>
