--- a/c_soloBOOT.html
+++ b/c_soloBOOT.html
@@ -41,40 +41,37 @@ CONTAMINACIÓN DO SOLO
   </div>
 </nav>
 
-<!--Comezo do corpo da páxina (sen navegador e sen o pé de páxina) -->	
-		<div class="container">
+<div class="container">
 
-<!--Un div baleiro por comodidade, para poder controlar mellor os tamaños. div auxiliar -->			
-			<div id=arriba> <!--Para acceder ao comezo da páxina-->
-			<div class="recheo"></div>
-			</div>
+<!--Título da páxina-->
+				<div class="container text-center py-5 ">
+					<h1 class="display-1">CONTAMINACIÓN DO SOLO</h1>
+				</div>
 
-<!--Zona do header, introducción -->
-		<div class="header">
-			<div class="H1">
-			<h1>CONTAMINACIÓN DO SOLO</h1>
-			</div>
-			<div class="texto">
+<!--Introducción-->
+			<div class="container mx-3">
+			<div class="row">
+			<div class="col-12 col-md-6">
 				<p>A contaminación do solo consiste na degradación da calidade do chan asociada á presenza de substancias químicas. Este tipo de contaminantes poden ser sólidos, líquidos ou gaseosos; e ocasionan que se afecte ao ciclo da vida das plantas, dos animais e á propia saúde humana.</p>
-				<img src="images/icono_solo.png" alt="Caricatura da contaminación do solo" />
+				<img src="images/icono_solo.png" class="tamanoIconos mx-auto d-block" alt="Caricatura da contaminación do solo" />
 			</div>
-			<div class="video">
-				<video controls autoplay muted loop><source src="Audiovisual/deforestacion.mp4" type="video/mp4">Bosque se árbores.</video>
+			<div class="col12 col-md-6">
+				<video controls autoplay muted loop class="tamanoVideo"><source src="Audiovisual/deforestacion.mp4" type="video/mp4">Bosque sen árbores</video>
 			</div>
-		</div>
-	
-<!--Seguinte bloque: Causas e consecuencias. Está dividido ao 50%-->	
-		<div class="CausasConsec">
-			<div class="causas">
-			<div class="H2">
-			<h2>CAUSAS</h2>
 			</div>
-			<p>Algunhas causas poden ser:</p>
-			<ul>
+			</div>
+
+<!--Causas e consecuencias-->
+		<div class="container my-5">
+			<div class="row">
+				<div class="col-12 col-md-6">
+				<h3 class="display-3">CAUSAS</h3>
+				<p>Algunhas causas poden ser:</p>
+			<ul class="debuxoUL">
 				<li>Probas atómicas</li>
 				<li>Actividade mineira</li>
 				<li>Tecnoloxía agrícola nociva:
-				<ul>
+				<ul class="debuxoUL2 mx-3">
 					<li>Utilización de augas contaminadas</li>
 					<li>Utilización de pesticidas</li>
 				</ul>
@@ -82,13 +79,11 @@ CONTAMINACIÓN DO SOLO
 				<li>Uso inadeucado dos sistemas de eliminación de basura</li>
 				<li>Falta de eliminación de refugallos</li>
 			</ul>
-			</div>
-			<div class="consecuencias">
-				<div class="H2">
-				<h2>CONSECUENCIAS</h2>
 				</div>
+				<div class="col-12 col-md-6">
+				<h3 class="display-3">CONSECUENCIAS</h3>
 				<p>As súas consecuencias son:</p>
-				<ul>
+				<ul class="debuxoUL">
 					<li>Danos na saude</li>
 					<li>Peores cultivos.</li>
 					<li>Contaminación de auga e aire</li>
@@ -96,23 +91,24 @@ CONTAMINACIÓN DO SOLO
 					<li>Desaparición de especies</li>
 					<li>Desertificación</li>
 				</ul>
+				</div>
 			</div>
 		</div>
 
-<!--Seguinte bloque. A curiosidade-->
-		<div class="curiosidade">
-			<div class="H2">
-			<h2>CURIOSIDADE</h2>
-			</div>
-			<div class="texto">
-				<p>A través do sistema respiratorio, o radon accede aos pulmóns. Alí descomponse e produce partículas alfa que se fixan ao tecido pulmonar e poden causar mutacións. No peor dos casos, desenvólvense tumores e, finalmente, cancro. Así e como a inhalación deste gas se converteu na segunda causa de morte por cancro de pulmón, só por debaixo do tabaco. Entre os non fumadores, é o principal factor de risco. Estímase que en Galicia morren máis de 300 persoas cada ano por cancros que poden ser atribuídos ao radon.</p>
-				<p>En Galicia, 42 das 53 comarcas, nas que reside máis da metade da poboación do país, están por riba do límite permitido.</p>
-				<p>A filtración de radon ás vivendas pode evitarse co peche das fendas polas que entra o gas e coa instalación dunha arqueta de succión (mecanismo para evacuar o radon cara o exterior). Non abonda con ventilar frecuentemente as vivendas xa que o gas deixa de acumularse, mais segue circulando. </p>
-			</div>
-			<div class="fotoCuriosa">
-				<img src="images/radon.png" alt="mapa_gas_radon_Galicia"/>
-				<p>Para máis información, visítese a páxina oficial do <a href="http://radon.gal/" target=_blank>Laboratorio de Randón de Galicia</a>.</p>
-			</div>
+<!--Curiosidade-->
+		<div class="container">
+				<div class="row">
+					<div class="col-12 col-md-6">
+					<h3 class="display-3">CURIOSIDADE</h3>
+					<p>A través do sistema respiratorio, o radon accede aos pulmóns. Alí descomponse e produce partículas alfa que se fixan ao tecido pulmonar e poden causar mutacións. No peor dos casos, desenvólvense tumores e, finalmente, cancro. Así e como a inhalación deste gas se converteu na segunda causa de morte por cancro de pulmón, só por debaixo do tabaco. Entre os non fumadores, é o principal factor de risco. Estímase que en Galicia morren máis de 300 persoas cada ano por cancros que poden ser atribuídos ao radon.</p>
+					<p>En Galicia, 42 das 53 comarcas, nas que reside máis da metade da poboación do país, están por riba do límite permitido.</p>
+					<p>A filtración de radon ás vivendas pode evitarse co peche das fendas polas que entra o gas e coa instalación dunha arqueta de succión (mecanismo para evacuar o radon cara o exterior). Non abonda con ventilar frecuentemente as vivendas xa que o gas deixa de acumularse, mais segue circulando. </p>
+					</div>
+					<div class="col-12 col-md-6">
+					<img src="images/radon.png" class="tamanoVideo" alt="mapa_gas_radon_Galicia"/>
+					<p>Para máis información, visítese a páxina oficial do <a href="http://radon.gal/" target=_blank>Laboratorio de Randón de Galicia</a>.</p>
+					</div>
+				</div>
 		</div>
 
 <!--Último bloque. O formulario final-->
@@ -189,21 +185,31 @@ CONTAMINACIÓN DO SOLO
 		</div>
 		
 <!--Pé de páxina -->
-		<footer>
-			<address class="direccion">
-				<p> Avenue de Lorraine 78110 Le Vésinet +33 627 21 35 69</p>
-			</address>
-			<div class="copyright">
-				<p>Copyright 2021 Rosa Bitxi ©</p>
+		<div class="container-fluid bg-pe letraBranca">
+			<div class="container pt-3">
+			<div class="row justify-content-between">
+			<div class="col-12 col-md-4">
+				<p class="rem08 text-center"> Avenue de Lorraine 78110 Le Vésinet +33 627 21 35 69</p>
 			</div>
-			<div class="asociacions">
-				<img src="images/pe_polar.png" alt="Logo-WWF"/>
-				<img src="images/pe_planeta.png" alt="Logo-Greenpeace"/>
-				<img src="images/pe_loro.png" alt="Logo-BirdLife"/>
+			<div class="col-12 col-md-4 ">
+				<p class="rem08 text-center">Copyright 2021 Rosa Bitxi ©</p>
+			</div>
+			<div class="col-12 col-md-4">
+			<p class="text-right">
+				<img src="images/pe_polar.png" class="tamanoImaxes" alt="Logo-WWF"/>
+				<img src="images/pe_planeta.png" class="tamanoImaxes" alt="Logo-Greenpeace"/>
+				<img src="images/pe_loro.png" class="tamanoImaxes" alt="Logo-BirdLife"/>
 				<!--Estes logos son xerados porque me validou CSS version 3-->
-				<img src="images/vcss.gif" alt="¡CSS Válido!" />
-				<img src="images/vcss-blue.gif" alt="¡CSS Válido!" />
+				<img src="images/vcss.gif" class="tamanoImaxes" alt="¡CSS Válido!" />
+				<img src="images/vcss-blue.gif" class="tamanoImaxes" alt="¡CSS Válido!" />
+			</p>
 			</div>
-		</footer>
+		</div>
+		</div>
+	</div>
+	
+<!--Cousas de bootstrap-->
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
 	</body>
 </html>
