Realizacion taboa en bootstrap

--- a/c_aireBOOT.html
+++ b/c_aireBOOT.html
@@ -114,7 +114,7 @@ CONTAMINACIÓN DO AIRE
 				<div class="H2">
 				<h2>E TI QUE FAS?</h2>
 				</div>
-			<form>
+			<form class="campos">
 				<label>Nome:</label>
 				<input type="text" name="nome_aire" value="Anónimo">
 				<br/>
