--- a/c_augaBOOT.html
+++ b/c_augaBOOT.html
@@ -55,7 +55,7 @@ CONTAMINACIÓN DA AUGA
 				<p>A contaminación hídrica é a presenza de compoñentes químicos ou de outra natureza de maneira superior á situación natural. Por iso, non se reúnen as condicións para o seu uso no estado natural.</p>
 				<p>Os principais contaminantes da auga son:</p>
 				<ul class="debuxoUL">
-					<<li>Basura e refugallos químicos</li>
+					<li>Basura e refugallos químicos</li>
 					<li>Augas residuais domésticas e industriais</li>
 					<li>Minerais inorgánicos</li>
 					<li>Compostos orgánicos</li>
@@ -64,12 +64,13 @@ CONTAMINACIÓN DA AUGA
 				<img src="images/icono_auga.png" class="tamanoIconos mx-auto d-block" alt="Caricatura da contaminación da auga" />
 			</div>
 			<div class="col12 col-md-6">
-				<table>
+				<table class="table table-striped">
 					<caption>Ránking de países con peores condicións de auga potable</caption>
-					<tr>
-						<th>Posición</th>
-						<th>País</th>
-					</tr>
+					<thead class="thead-dark">
+						<th scope="col">Posición</th>
+						<th scope="col">País</th>
+					</thead>
+					<tbody>
 					<tr>
 						<td>1</td>
 						<td>Ruanda</td>
@@ -110,6 +111,7 @@ CONTAMINACIÓN DA AUGA
 						<td>10</td>
 						<td>Bélgica</td>
 					</tr>
+					</tbody>
 				</table>
 			</div>
 			</div>
@@ -169,7 +171,7 @@ CONTAMINACIÓN DA AUGA
 			<div class="H2">
 			<h2>E TI QUE FAS?</h2>
 			</div>
-			<form>
+			<form class="campos">
 				<label>Nome:</label>
 				<input type="text" name="nome_auga" value="Anónimo">
 				<br/>
