--- a/c_soloBOOT.html
+++ b/c_soloBOOT.html
@@ -116,7 +116,7 @@ CONTAMINACIÓN DO SOLO
 			<div class="H2">
 			<h2>E TI QUE FAS?</h2>
 			</div>
-			<form>
+			<form class="campos">
 				<label>Nome:</label>
 				<input type="text" name="nome_solo" value="Anónimo">
 				<br/>
